@@ -1,3 +1,10 @@
+trepan 0.4.5 2015-05-10
+- Fix bug in "next" command
+- Try to fix RST in pypi
+- Rename package to trepan3 since source-code can't co-exist
+- fix bux in searching help with regexp
+
+
 trepan 0.4.3 2015-04-06
 - Make sure we don't step/trace into open() when running debugger
 
